# arretify

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  EDGE_CASES.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
arretify/: clean_ocrized_file.py  debug.py  debug_test.py  errors.py  html_schemas.py  main.py  main_test.py  pipeline.py  pipeline_tests.py  settings.py  types.py  types_test.py
arretify/_vendor/: README.md
arretify/arrete_segmentation/: basic_elements.py  basic_elements_test.py  header.py  header_elements.py  header_elements_test.py  header_test.py  main_content.py  parse_arrete.py  section_rules.py  section_rules_test.py  section_titles.py  sentence_rules.py  sentence_rules_test.py  types.py
arretify/consolidation_operations/: operations_detection.py  operations_detection_test.py  operations_resolution.py  operations_resolution_test.py
arretify/law_data/: dev_cache.py  eurlex.py  eurlex_constants.py  external_urls.py  legifrance.py  legifrance_constants.py  types.py  uri.py  uri_test.py
arretify/parsing_utils/: dates.py  dates_test.py  numbering.py  numbering_test.py  patterns.py  source_mapping.py  source_mapping_tests.py
arretify/references_detection/: arretes_detection.py  codes_detection.py  decrets_detection_test.py  eu_acts_detection.py  sections_detection.py  sections_detection_test.py
arretify/references_resolution/: arretes_resolution.py  circulaires_resolution.py  circulaires_resolution_test.py  codes_resolution.py  core.py  decrets_resolution.py  decrets_resolution_test.py  eu_acts_resolution.py  sections_resolution.py  sections_resolution_test.py
arretify/regex_utils/: __init__.py  core.py  core_test.py  functional.py  functional_test.py  helpers.py  helpers_test.py  merge.py  merge_test.py  split.py  split_test.py  split_with_regex_tree.py  types.py
arretify/step_consolidation/: __init__.py  __step__.py  operands_detection.py  operands_detection_test.py  operations_detection.py  operations_detection_test.py
arretify/step_markdown_cleaning/: __step__.py  markdown_cleaning.py  markdown_cleaning_test.py  ocr_cleaning.py
arretify/step_ocr/: __init__.py  __step__.py  mistral_ocr.py
arretify/step_references_detection/: __init__.py  __step__.py  arretes_detection.py  arretes_detection_test.py  circulaires_detection.py  circulaires_detection_test.py  codes_detection.py  codes_detection_test.py  core.py  decrets_detection.py  decrets_detection_test.py  eu_acts_detection.py  eu_acts_detection_test.py  match_sections_with_documents.py  match_sections_with_documents_test.py  sections_detection.py  sections_detection_test.py  self_detection.py  self_detection_test.py
arretify/step_references_resolution/: __init__.py  __step__.py  add_referenced_document.py  arretes_resolution.py  arretes_resolution_test.py  circulaires_resolution.py  codes_resolution.py  (+7 more)
bench_convertisseur_xml/: clean_ocrized_file.py  debug.py  debug_test.py  errors.py  html_schemas.py  main.py  main_single.py  main_test.py  settings.py  types.py  uri.py  uri_test.py
scripts/: download_aps_georisques.py  download_data_legifrance.py  extract_all_matches.py
(+380 files in other folders)
